# VeriForge

./: .gitignore  CHANGELOG.md  CLAUDE_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README_ANDROID.md  README_WINDOWS.md  SECURITY.md  VERIFORGE_MEMORY.md  buildozer.spec  claude_desktop_config.json  install-android.sh  install.py  install.sh  jarvis.py  launch.bat  pyproject.toml  setup.py  tox.ini  uninstall.bat  veriforge-red-gui.pyw  veriforge-sdk.bat  veriforge-service.py  veriforge_desktop.py  veriforge_gui.py  veriforge_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml  vericlaw-ci.yml
backend/: __init__.py  auth.py  database.py  main.py  requirements.txt  scanner.py  tools_v2_embedded.py
brain/: __init__.py  handlers.py  intent.py  memory.py  personality.py
dashboard/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
examples/: __init__.py  agent_auth.py  basic_scan.py  basic_usage.py  compliance_check.py  comprehensive_test.py  ide_integration.py  median_finder.py  payment_processor.py
examples/claude/: README.md  claude_desktop_config.json
examples/copilot/: README.md
examples/cursor/: README.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FindingRow.jsx  GradeBadge.jsx  Layout.jsx  LoginModal.jsx  SeverityBadge.jsx  StatCard.jsx
frontend/src/hooks/: useAuth.js
frontend/src/lib/: api.js
frontend/src/pages/: CompliancePage.jsx  Dashboard.jsx  FindingsPage.jsx  ProjectsPage.jsx  ScanPage.jsx  TeamsPage.jsx
tests/: __init__.py  test_audit.py  test_auth.py  test_dsl.py  test_engine.py  test_hardened.py  test_mcp.py  test_sdk.py  test_swarm.py
vericlaw/: __init__.py  __main__.py  analyzer.py  certifier.py  ci.py  engine.py  mcp_tools.py  models.py  mutator.py  payloads.py  prover.py  report.py  swarm.py
vericlaw/docs/: API.md  DEPLOYMENT.md
vericlaw/templates/: certificate.html
vericlaw/tests/: test_core.py  test_integration.py  test_report.py  test_security.py
veriforge/: __init__.py  __main__.py  agent.py  audit.py  auth.py  cli.py  compliance.py  config.py  engine.py  ide.py  report.py  semantic.py
veriforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
veriforge_dsl/: __init__.py  __main__.py  agent.py  contracts.py  core.py  types.py  verification.py
veriforge_mcp/: __init__.py  server.py  tools.py  tools_v2.py
veriforge_red/: __init__.py
veriforge_red/core/: __init__.py  database.py  engine.py  monitor.py  privacy.py  quarantine.py  remediation.py  scanner.py  threat_detector.py  updater.py  vault.py  vulndb_loader.py
veriforge_red/desktop/: __init__.py  __main__.py  app.py  service.py  tray.py
veriforge_red/mobile/: __init__.py  android_privacy.py  android_service.py  main.py  notifications.py  red.kv
veriforge_red/tests/: __init__.py  test_android.py  test_core.py  test_updater.py  test_windows.py
veriforge_red/website/: app.js  download.html  index.html  particles.js  style.css
veriforge_red/windows/: __init__.py  privacy.py
veriforge_sdk/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py
veriforge_sdk/core/: __init__.py  module.py
veriforge_sdk/dsl/: __init__.py  module.py
veriforge_sdk/mcp/: __init__.py  module.py
veriforge_sdk/products/: __init__.py  base.py  core.py  dsl.py  mcp.py  red.py  swarm.py  vericlaw.py
veriforge_sdk/red/: __init__.py  module.py  scanner.py
veriforge_sdk/swarm/: __init__.py  module.py
veriforge_sdk/utils/: __init__.py  logger.py
veriforge_sdk/vericlaw/: __init__.py  module.py
veriforge_swarm/: __init__.py  agent.py  consensus.py  demo.py  swarm.py
veriforge_swarm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
web/: index.html  server.py
