[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veriforge"
version = "0.4.0-hardened"
description = "Hardened formal verification platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["jinja2>=3.1.0", "cryptography>=42.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
    "pytest-cov>=5.0",
]

[project.scripts]
veriforge = "veriforge.__main__:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["veriforge"]
omit = ["*/__main__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
