[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vericlaw"
version = "0.5.0"
description = "Adversarial security testing framework built on VeriForge"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VeriForge Security", email = "security@veriforge.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.0",
    "ruff>=0.5.0",
]

[project.scripts]
vericlaw = "vericlaw.__main__:main"

[project.urls]
Homepage = "https://github.com/veriforge/vericlaw"
Documentation = "https://docs.veriforge.dev/vericlaw"
Repository = "https://github.com/veriforge/vericlaw"
Issues = "https://github.com/veriforge/vericlaw/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105"]

[tool.pytest.ini_options]
testpaths = ["vericlaw/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
