[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veriforge-sdk"
version = "1.0.0"
description = "Unified Developer Kit for the VeriForge security platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VeriForge Engineering", email = "sdk@veriforge.io"},
]
keywords = [
    "security", "scanning", "compliance", "testing", "dsl",
    "consensus", "sandbox", "sdk", "veriforge",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/veriforge/veriforge-sdk"
Documentation = "https://docs.veriforge.io/sdk"
Repository = "https://github.com/veriforge/veriforge-sdk.git"
Issues = "https://github.com/veriforge/veriforge-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["veriforge_sdk*"]

[tool.setuptools.package-data]
veriforge_sdk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
